--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
     ],
     "rules": {
         "no-console": "warn",
+        "no-empty": "warn",
         "linebreak-style": [
             "error",
             "unix"
