--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "npx tsc",
     "jasmine": "jasmine",
     "test": "npm run build && npm run jasmine",
+    "test:watch": "nodemon --ext ts --exec 'jasmine-ts \"src/**/*.spec.ts\"'",
     "lint": "eslint . --ext .ts",
     "lint-and-fix": "eslint . --ext .ts --fix",
     "prepare": "husky install"
