--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "npx tsc",
     "jasmine": "jasmine",
     "test": "npm run build && npm run jasmine",
-    "test:watch": "nodemon --ext ts --exec 'jasmine-ts \"src/**/*.spec.ts\"'",
+    "test:watch": "nodemon --ext js --exec 'jasmine \"src/**/*.spec.js\"'",
     "lint": "eslint . --ext .ts",
     "lint-and-fix": "eslint . --ext .ts --fix",
     "prepare": "husky install"
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "jasmine": "^3.8.0",
     "jasmine-spec-reporter": "^7.0.0",
+    "rimraf": "^3.0.2",
     "sharp": "^0.28.3",
     "supertest": "^6.1.3"
   },
@@ -35,6 +36,7 @@
     "@types/express": "^4.17.13",
     "@types/jasmine": "^3.8.1",
     "@types/node": "^16.3.2",
+    "@types/rimraf": "^3.0.1",
     "@types/sharp": "^0.28.4",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
